<resources>
    <string name="app_name">TuitLDM</string>
    <string name="title_activity_prueba_conexiones">pruebaConexiones</string>
    <string name="accion_info_login">accion_info_login</string>
    <string name="accion_buscar_chats">accion_buscar_chats</string>
    <string name="accion_enviar_img">accion_enviar_img</string>
    <string name="id_chat">id_chat</string>
    <string name="boton_de_configuracion">boton de configuracion</string>
    <string name="logo_de_la_aplicacion">logo de la aplicacion</string>
    <string name="usuario">USUARIO</string>
    <string name="contrase_a">CONTRASEÑA</string>
    <string name="crear">Crear</string>
    <string name="entrar">Entrar</string>
    <string name="nombre_persona">nombre_persona</string>
    <string name="button_enviar_mic">button_enviar_mic</string>
    <string name="escribe_un_mensaje">Escribe un mensaje</string>
    <string name="boton_camara">boton camara</string>
    <string name="boton_de_volver">boton de volver</string>
    <string name="introduce_un_nick">Introduce un nick</string>
    <string name="nombre_de_usuario">nombre_de_usuario</string>
    <string name="añadir">añadir</string>
    <string name="No_conexión_contigo_mismo">\"No puedes crear conexión contigo mismo\"</string>
    <string name="Ya_estas_conectado_ese_usuario">\"Ya estas conectado ese usuario\"</string>
    <string name="Cancelar">Cancelar</string>
    <string name="noexiste">No Existe</string>
    <string name="crear_conexi_n">Crear conexión</string>
    <string name="imagen_de_perfil">imagen de perfil</string>
    <string name="_00_00">00:00</string>
    <string name="nombre_de_tarjeta">nombre_de_tarjeta</string>
    <string name="mensaje_de_tarjeta">mensaje_de_tarjeta</string>
    <string name="enviar_imagen_desde_la_galer_a">Enviar imagen desde la Galería</string>
    <string name="mostrar_info_de_lo_que_ves">Mostrar info de lo que ves</string>
    <string name="buscar_usuarios_para_crear_conexioens">Buscar usuarios para crear conexioens</string>
    <string name="version_1_0_1_Open_Beta">Version: 1.0.1 - Open Beta</string>
    <string name="startConexion">Mensaje para comenzar la conexión con:</string>
    <string name="bienvenido_a_tuitlab">Bienvenido a TuitLab</string>
    <string name="sigue_estos_tres_sencillos_pasos_para_disfrutar_de_esta_aplicaci_n">Sigue estos tres sencillos pasos para disfrutar de esta aplicación:</string>
    <string name="_1">1</string>
    <string name="introduce_tu_usuario_y_contrase_a">Introduce tu usuario y contraseña</string>
    <string name="_2">2</string>
    <string name="si_tienes_cuenta_pulsa_entrar_y_si_eres_un_nuevo_usuario_pulsa_crear_cuenta">Si tienes cuenta pulsa entrar y si eres un nuevo usuario pulsa crear cuenta.</string>
    <string name="_3">3</string>
    <string name="disfruta_de_la_app">Disfruta de la app!</string>
    <string name="qu_estoy_viendo">¿Qué estoy viendo?</string>
    <string name="pulsa_sobre_el_usuario_que_quieras_para_empezar_a_hablar_con_el">Pulsa sobre el usuario que quieras para empezar a hablar con el.</string>
    <string name="puedes_configurar_tu_perfil_en_bot_n_de_configuraci_n_que_tienes_al_lado_de_tu_nick">Puedes configurar tu perfil en botón de configuración que tienes al lado de tu nick.</string>
    <string name="ahora_est_s_en_el_chat_sigue_estos_simples_pasos_para_controlarlo_al_m_ximo">Ahora estás en el Chat, sigue estos simples pasos para controlarlo al máximo:</string>
    <string name="pulsa_la_lupa_para_a_adir_a_un_usuario_solo_tienes_que_poner_el_nick_y_buscarlo">Pulsa la lupa para añadir a un usuario, solo tienes que poner el nick y buscarlo.</string>
    <string name="ahora_est_s_chateando_con_un_usuario_sigue_estos_pasos_para_dominar_todo_lo_que_ofrece_tuitlab">Ahora estás chateando con un usuario, sigue estos pasos para dominar todo lo que ofrece TuitLDM:</string>
    <string name="para_enviar_un_mensaje_escribe_lo_que_quieras_y_pulsa_el_bot_n_de_enviar">Para enviar un mensaje escribe lo que quieras y pulsa el botón de enviar.</string>
    <string name="puedes_enviar_im_genes_desde_la_galer_a_pulsa_el_icono_de_imagen_en_la_parte_superior_y_selecciona_la_imagen">Puedes enviar imágenes desde la galería, pulsa el icono de imagen en la parte superior y selecciona la imagen.</string>
    <string name="puedes_enviar_un_mensaje_de_audio_pulsa_el_microfono_y_empezara_la_grabaci_n_vuelve_a_pulsar_para_enviar">Puedes enviar un mensaje de audio, pulsa el microfono y empezara la grabación, vuelve a pulsar para enviar.</string>
    <string name="nick">Nick:</string>
    <string name="nick_usuario">nick_usuario</string>
    <string name="pass">Pass:</string>
    <string name="editar">Editar</string>
    <string name="nombre">Nombre:</string>
    <string name="nombre_del_usuario">nombre del usuario</string>
    <string name="apellido_del_usuario">apellido del usuario</string>
    <string name="borrar_cuentra">Borrar cuenta</string>
    <string name="cerrar_cuentra">Cerrar sesion</string>
    <string name="todo">TODO</string>
    <string name="apellido">Apellido:</string>
    <string name="exito_actualizar_nombre">Actualizado el nombre con éxito</string>
    <string name="exitoActualizarApellido">Actualizado el apellido con éxito</string>
    <string name="exito_actuoalizar_contrase_a">Contraseña cambiada con éxito</string>
    <string name="cerrar_conexion">Cerrar conexion</string>
    <string name="practica">Practica de LDM</string>
    <string name="editarparametro">editarParametro</string>
    <string name="enviado_audio">Ha enviado un audio...</string>
    <string name="e">Error</string>
    <string name="as">Añadido!!</string>
</resources>
