<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    app:cardCornerRadius="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="18dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_bold"
                android:text="@string/bienvenido_a_tuitlab"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

        </LinearLayout>


        <TextView
            android:layout_width="234dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans"
            android:text="@string/sigue_estos_tres_sencillos_pasos_para_disfrutar_de_esta_aplicaci_n"
            android:textAlignment="center" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp"
                android:gravity="center"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:background="@drawable/fondo_boton_enviar"
                    android:fontFamily="@font/open_sans_bold"
                    android:text="@string/_1"
                    android:textAlignment="center"
                    android:textColor="@color/common_google_signin_btn_text_dark_default" />

            </LinearLayout>

            <TextView
                android:layout_width="225dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans"
                android:text="@string/introduce_tu_usuario_y_contrase_a"
                android:textAlignment="textStart"
                android:textAllCaps="false" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp"
                android:gravity="center"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:background="@drawable/fondo_boton_enviar"
                    android:fontFamily="@font/open_sans_bold"
                    android:text="@string/_2"
                    android:textAlignment="center"
                    android:textColor="@color/common_google_signin_btn_text_dark_default" />

            </LinearLayout>

            <TextView
                android:layout_width="224dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans"
                android:text="@string/si_tienes_cuenta_pulsa_entrar_y_si_eres_un_nuevo_usuario_pulsa_crear_cuenta"
                android:textAlignment="textStart" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp"
                android:gravity="center"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:background="@drawable/fondo_boton_enviar"
                    android:fontFamily="@font/open_sans_bold"
                    android:text="@string/_3"
                    android:textAlignment="center"
                    android:textColor="@color/common_google_signin_btn_text_dark_default" />

            </LinearLayout>


            <TextView
                android:layout_width="223dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans"
                android:text="@string/disfruta_de_la_app"
                android:textAlignment="textStart" />

        </LinearLayout>


    </LinearLayout>

</android.support.v7.widget.CardView>