<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    app:cardCornerRadius="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingTop="18dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_bold"
                android:text="@string/qu_estoy_viendo"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

        </LinearLayout>


        <TextView
            android:layout_width="234dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans"
            android:text="@string/ahora_est_s_en_el_chat_sigue_estos_simples_pasos_para_controlarlo_al_m_ximo"
            android:textAlignment="center" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:background="@drawable/fondo_boton_enviar"
                    android:fontFamily="@font/open_sans_bold"
                    android:text="@string/_1"
                    android:textAlignment="center"
                    android:textColor="@color/common_google_signin_btn_text_dark_default" />

            </LinearLayout>

            <TextView
                android:layout_width="225dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans"
                android:text="@string/pulsa_la_lupa_para_a_adir_a_un_usuario_solo_tienes_que_poner_el_nick_y_buscarlo"
                android:textAlignment="textStart"
                android:textAllCaps="false" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:background="@drawable/fondo_boton_enviar"
                    android:fontFamily="@font/open_sans_bold"
                    android:text="@string/_2"
                    android:textAlignment="center"
                    android:textColor="@color/common_google_signin_btn_text_dark_default" />

            </LinearLayout>

            <TextView
                android:layout_width="224dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans"
                android:text="@string/pulsa_sobre_el_usuario_que_quieras_para_empezar_a_hablar_con_el"
                android:textAlignment="textStart" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="18dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:background="@drawable/fondo_boton_enviar"
                    android:fontFamily="@font/open_sans_bold"
                    android:text="@string/_3"
                    android:textAlignment="center"
                    android:textColor="@color/common_google_signin_btn_text_dark_default" />

            </LinearLayout>


            <TextView
                android:layout_width="223dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans"
                android:text="@string/puedes_configurar_tu_perfil_en_bot_n_de_configuraci_n_que_tienes_al_lado_de_tu_nick"
                android:textAlignment="textStart" />

        </LinearLayout>


    </LinearLayout>

</android.support.v7.widget.CardView>