<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    app:cardCornerRadius="5dp"
    android:elevation="3dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <!--Este es layout de la imagen -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="10dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_fotoPerfConfiguradorConex"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:border_color="@color/colorPrimary"
                app:border_width="3dp"
                android:contentDescription="@string/todo"
                android:src="@mipmap/ic_launcher" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:gravity="center"
                    tools:ignore="UselessParent">

                    <TextView
                        android:id="@+id/nick_configuradorConex"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/open_sans_bold"
                        android:text="@string/nick_usuario"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="24sp" />
                </LinearLayout>

            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_bold"
                android:text="@string/nombre"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/nombre_configuradorConex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans"
                android:importantForAutofill="no"
                android:text="@string/nombre_del_usuario"
                android:textColor="@color/colorPrimaryDark"
                android:layout_marginStart="3dp"
                android:textSize="14sp"
                tools:ignore="LabelFor,UnusedAttribute" />

        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans_bold"
                    android:text="@string/apellido"
                    android:textColor="@color/colorPrimary" />

                <TextView
                    android:id="@+id/apellido_configuradorConex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans"
                    android:importantForAutofill="no"
                    android:text="@string/apellido_del_usuario"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp"
                    android:layout_marginStart="3dp"
                    tools:ignore="LabelFor,UnusedAttribute" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    tools:ignore="RtlSymmetry,UselessParent">

                    <Button
                        android:id="@+id/btn_cerrarConexion"
                        android:layout_width="121dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/fondo_btn_crear"
                        android:elevation="2dp"
                        android:text="@string/cerrar_conexion"
                        android:textColor="@color/colorPrimary"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>