<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".chat.MensajesActivity"
    android:orientation="vertical"
    android:gravity="center">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:background="@drawable/borde_sombreado"
        android:layout_gravity="center"
        android:gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="2dp">

            <ImageButton
                android:id="@+id/imgAtras"
                android:layout_width="28dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:contentDescription="@string/boton_de_volver"
                android:padding="10dp"
                android:src="@drawable/ic_back_morado" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:contentDescription="@string/imagen_de_perfil"
                android:id="@+id/iv_imagenMensaje"
                android:layout_width="55dp"
                android:layout_height="55dp"
                app:border_color="@color/colorPrimaryDark"
                app:border_width="3dp"
                android:src="@mipmap/ic_launcher"/>

        </LinearLayout>

        <TextView
            android:id="@+id/nombre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_margin="8dp"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/nombre_persona"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="2dp"
            android:layout_gravity="center"
            android:gravity="center">

            <ImageButton
                android:id="@+id/button_configNickB"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:contentDescription="@string/boton_de_configuracion"
                android:src="@drawable/ic_recurso_20" />

        </LinearLayout>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/listaMensajes"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorFondoRecicler">

    </android.support.v7.widget.RecyclerView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="horizontal"
        android:elevation="3dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="1dp"
            android:layout_gravity="center"
            android:gravity="center"
            >

            <ImageButton
                android:id="@+id/button_camara"
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:contentDescription="@string/boton_camara"
                android:padding="5dp"
                android:src="@drawable/ic_img_blanco" />

        </LinearLayout>

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            app:cardCornerRadius="20dp"
            android:elevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:orientation="horizontal">

                <EditText

                    android:id="@+id/txt_mensaje"
                    android:layout_width="290dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/open_sans"
                    android:hint="@string/escribe_un_mensaje"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine"
                    android:textColor="@color/colorPrimaryDark"
                    tools:targetApi="o" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <LinearLayout
            android:layout_width="55dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center">


                <ImageButton
                    android:contentDescription="@string/button_enviar_mic"
                    android:id="@+id/btn_enviar_y_mic"
                    android:layout_width="46dp"
                    android:layout_height="46dp"
                    android:layout_gravity="center"
                    android:adjustViewBounds="false"
                    android:background="@drawable/fondo_boton_enviar"
                    android:src="@drawable/ic_enviar_blanco" />


        </LinearLayout>

    </LinearLayout>

</LinearLayout>