<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView

    android:id="@+id/cardView_mensajes"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    cardview:cardCornerRadius="8sp"
    android:layout_margin="3dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="8dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp">

            <TextView
                android:id="@+id/tv_nickMensaje"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/open_sans_bold"
                android:gravity="center_vertical"
                android:text="@string/nombre_de_tarjeta"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="1dp">

                <TextView
                    android:id="@+id/tv_horaMensaje"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans_light"
                    android:text="@string/_00_00"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp"
                    android:textStyle="italic" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_mensaje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:gravity="start"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:id="@+id/tv_mensajeMensaje"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_bold"
                android:text="@string/mensaje_de_tarjeta"
                android:textAlignment="textStart"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>